src/objects/chance__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>12 -  Field9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12-过保月份</inlineHelpText>
        <label>计入收入月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>IF( ISBLANK(Final_sale_price_del__c)  = TRUE ,  Final_sale_price_del__c  / 12,  Field1__c  / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>月保修单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>Field10__c  *  Field11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>计入收入</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_sale_price_del__c</fullName>
        <label>最终成交价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwnEmail__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>#所有人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_the_difficulty__c</fullName>
        <label>项目难点</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visit_date__c</fullName>
        <label>拜访日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>拜访人员</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>chanceHlRz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_way__c</fullName>
        <label>拜访方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>当面拜访</fullName>
                    <default>true</default>
                    <label>当面拜访</label>
                </value>
                <value>
                    <fullName>电话拜访</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>保修设备</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMARIS 1050RS</fullName>
                </value>
                <value>
                    <fullName>AMARIS</fullName>
                </value>
                <value>
                    <fullName>AMARIS 500E/Compact</fullName>
                </value>
                <value>
                    <fullName>P200</fullName>
                </value>
                <value>
                    <fullName>200TX</fullName>
                </value>
                <value>
                    <fullName>Daytona</fullName>
                </value>
                <value>
                    <fullName>VX120</fullName>
                </value>
                <value>
                    <fullName>Keratron/Keratron Scout</fullName>
                </value>
                <value>
                    <fullName>Combi</fullName>
                </value>
                <value>
                    <fullName>Irx3</fullName>
                </value>
                <value>
                    <fullName>Sirius</fullName>
                </value>
                <value>
                    <fullName>AMARIS 750S</fullName>
                </value>
                <value>
                    <fullName>ESIRIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YDJG__c</fullName>
        <label>详细保修方案</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <formula>TEXT(customer__r.area__c)</formula>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>communication_content__c</fullName>
        <label>沟通内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>医院</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IDS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>expireX1__c</fullName>
        <label>设备过保日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>key_person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>项目关键人</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.customer__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>chance3BeS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>next_step__c</fullName>
        <label>下一步方案</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>possible__c</fullName>
        <label>可能性</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>金额</label>
        <summarizedField>chanceproduct__c.totalfee__c</summarizedField>
        <summaryForeignKey>chanceproduct__c.chance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>province__c</fullName>
        <formula>TEXT(customer__r.province__c)</formula>
        <label>省份</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>阶段</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未启动</fullName>
                </value>
                <value>
                    <fullName>项目启动</fullName>
                    <default>true</default>
                    <label>项目启动</label>
                </value>
                <value>
                    <fullName>项目推进</fullName>
                </value>
                <value>
                    <fullName>项目谈判</fullName>
                </value>
                <value>
                    <fullName>合同签订中</fullName>
                </value>
                <value>
                    <fullName>已签合同</fullName>
                </value>
                <value>
                    <fullName>失去</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>推荐保修模式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3年全保</fullName>
                    <default>true</default>
                    <label>3年全保</label>
                </value>
                <value>
                    <fullName>技术保修</fullName>
                </value>
                <value>
                    <fullName>1年全保</fullName>
                </value>
                <value>
                    <fullName>5年全保</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>业务机会（技术用）</label>
    <listViews>
        <fullName>Y2016</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>customer__c</columns>
        <columns>X1__c</columns>
        <columns>expireX1__c</columns>
        <columns>type__c</columns>
        <columns>Field1__c</columns>
        <columns>Final_sale_price_del__c</columns>
        <columns>stage__c</columns>
        <columns>possible__c</columns>
        <columns>Visit_date__c</columns>
        <columns>Visit_member__c</columns>
        <columns>Visit_way__c</columns>
        <columns>communication_content__c</columns>
        <columns>next_step__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2016</value>
        </filters>
        <label>2016年业务机会</label>
    </listViews>
    <listViews>
        <fullName>Y2017</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>customer__c</columns>
        <columns>Field2__c</columns>
        <columns>X1__c</columns>
        <columns>expireX1__c</columns>
        <columns>type__c</columns>
        <columns>Field1__c</columns>
        <columns>Final_sale_price_del__c</columns>
        <columns>Visit_date__c</columns>
        <columns>Visit_member__c</columns>
        <columns>Visit_way__c</columns>
        <columns>communication_content__c</columns>
        <columns>next_step__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>2017年业务机会</label>
    </listViews>
    <listViews>
        <fullName>Y2018</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>customer__c</columns>
        <columns>Field2__c</columns>
        <columns>X1__c</columns>
        <columns>expireX1__c</columns>
        <columns>type__c</columns>
        <columns>Field1__c</columns>
        <columns>Final_sale_price_del__c</columns>
        <columns>Visit_date__c</columns>
        <columns>Visit_member__c</columns>
        <columns>Visit_way__c</columns>
        <columns>communication_content__c</columns>
        <columns>next_step__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>AMARIS</value>
        </filters>
        <label>2018年业务机会</label>
    </listViews>
    <listViews>
        <fullName>dancifuwu</fullName>
        <columns>NAME</columns>
        <columns>OwnEmail__c</columns>
        <columns>type__c</columns>
        <columns>remark__c</columns>
        <columns>stage__c</columns>
        <columns>price__c</columns>
        <columns>possible__c</columns>
        <columns>customer__c</columns>
        <columns>YDJG__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>chance__c.sparepartsell</value>
        </filters>
        <label>单次技术服务</label>
    </listViews>
    <listViews>
        <fullName>weiqidong</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>customer__c</columns>
        <columns>X1__c</columns>
        <columns>expireX1__c</columns>
        <columns>type__c</columns>
        <columns>Field1__c</columns>
        <columns>Final_sale_price_del__c</columns>
        <columns>stage__c</columns>
        <columns>possible__c</columns>
        <columns>Visit_date__c</columns>
        <columns>Visit_member__c</columns>
        <columns>Visit_way__c</columns>
        <columns>communication_content__c</columns>
        <columns>next_step__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>stage__c</field>
            <operation>equals</operation>
            <value>未启动</value>
        </filters>
        <label>未启动项目</label>
    </listViews>
    <nameField>
        <label>业务机会名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>业务机会（技术用）</pluralLabel>
    <recordTypes>
        <fullName>Optional_components</fullName>
        <active>true</active>
        <label>选配组件</label>
    </recordTypes>
    <recordTypes>
        <fullName>guaranteesell</fullName>
        <active>true</active>
        <description>用于记录保修销售的信息</description>
        <label>保修销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>sparepartsell</fullName>
        <active>true</active>
        <description>用于记录单次维修的信息</description>
        <label>单次维修</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>StagePossible</fullName>
        <active>true</active>
        <description>阶段不为空时可能性必填</description>
        <errorConditionFormula>TEXT(stage__c) &lt;&gt; null  &amp;&amp;   TEXT( possible__c )  = null</errorConditionFormula>
        <errorMessage>阶段不为空时可能性必填</errorMessage>
    </validationRules>
</CustomObject>